# tutti

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  tutti.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_report.yml  feature_request.yml
.github/workflows/: codeql.yml  coverage.yml  docs.yml  rust.yml
crates/tutti-cli/: Cargo.toml  README.md
crates/tutti-cli/src/: config.rs  logger.rs  main.rs
crates/tutti-cli/src/commands/: daemon.rs  daemon_start.rs  daemon_stop.rs  mod.rs  run.rs
crates/tutti-config/: Cargo.toml
crates/tutti-config/src/: adapter.rs  lib.rs  model.rs  raw.rs
crates/tutti-core/: Cargo.toml
crates/tutti-core/src/: error.rs  lib.rs  runner.rs  types.rs
crates/tutti-core/src/process/: mod.rs  unix.rs
crates/tutti-core/src/process_manager/: base.rs  mod.rs  types.rs
crates/tutti-core/src/process_manager/implementations/: mock.rs  mod.rs  unix.rs
crates/tutti-core/src/supervisor/: background.rs  commands.rs  main.rs  mod.rs
crates/tutti-core/tests/: test_process_manager.rs
crates/tutti-core/tests/fixtures/: both.sh  ignore_sigint_sigkill_only.sh  infinite_sigint_kills.sh  stderr.sh  stdout.sh
crates/tutti-daemon/: Cargo.toml
crates/tutti-daemon/src/: lib.rs
crates/tutti-transport/: Cargo.toml
crates/tutti-transport/src/: api.rs  error.rs  lib.rs
crates/tutti-transport/src/client/: ipc_client.rs  mod.rs  worker.rs
crates/tutti-transport/src/server/: fanout.rs  ipc_server.rs  mod.rs
crates/tutti-types/: Cargo.toml
crates/tutti-types/src/: lib.rs
docs/: CONTRIBUTING.md  SECURITY.md  SUMMARY.md  book.toml  configuration.md  installation.md  introduction.md  motivation.md  usage.md
docs/src/: installation.md  usage.md
examples/: example.tutti.toml
tests/assets/: correct_config.toml  unknown_format.txt
