[workspace]
members = [ "crates/tutti-cli", "crates/tutti-config","crates/tutti-core"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = { version = "2" }
toml = { version = "0.8" }

[workspace.lints.rust]
unused = { level = "warn", priority = -1 }
unused_imports = "deny"
dead_code = "warn"
missing_debug_implementations = "warn"
missing_docs = "allow"
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
