[workspace]
members = [ "crates/tutti-cli", "crates/tutti-config","crates/tutti-core", "crates/tutti-daemon", "crates/tutti-transport", "crates/tutti-types"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = { version = "1.0" }
async-trait = { version = "0.1" }
bytes = { version = "1.11" }
clap = { version = "4.5", features = ["derive"] }
colored = { version = "3" }
futures = { version = "0.3" }
futures-core = { version = "0.3" }
futures-util = { version = "0.3" }
libc = { version = "0.2" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
thiserror = { version = "2" }
tokio = { version = ">=1.23.1, <2", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7", features = ["io"] }
toml = { version = "0.9" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

[workspace.lints.rust]
unused = { level = "warn", priority = -1 }
unused_imports = "warn"
dead_code = "warn"
missing_debug_implementations = "warn"
missing_docs = "allow"
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
