[package]
name = "tutti-cli"
description = "Command-line interface for Tutti"
repository = "https://github.com/ya7on/tutti"
documentation = "https://ya7on.github.io/tutti"
categories = ["command-line-interface", "command-line-utilities", "development-tools", "development-tools::build-utils"]
version = "0.1.5"
edition.workspace = true
license.workspace = true
rust-version = "1.82.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

tutti-config = { version = "0.1.5", path = "../tutti-config", features = ["toml"] }
tutti-daemon = { version = "0.1.5", path = "../tutti-daemon" }
tutti-transport = { version = "0.1.5", path = "../tutti-transport" }

[lints]
workspace = true
