[package]
name = "tutti-config"
description = "Configuration management for Tutti"
repository = "https://github.com/ya7on/tutti"
version = "0.1.2"
edition.workspace = true
license.workspace = true

[features]
default = ["toml"]
toml = ["dep:toml"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
toml = { workspace = true, optional = true }

[lints]
workspace = true
