[package]
name = "tutti-core"
description = "Core functionality for Tutti"
repository = "https://github.com/ya7on/tutti"
version = "0.1.2"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
colored = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["io"] }

tutti-config = { version = "0.1.2", path = "../tutti-config", default-features = false }
tutti-types = { version = "0.1.2", path = "../tutti-types", default-features = false }

[lints]
workspace = true
