[package]
name = "tutti-core"
description = "Core functionality for Tutti"
repository = "https://github.com/ya7on/tutti"
version = "0.1.5"
edition.workspace = true
license.workspace = true
rust-version = "1.82.0"

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
tracing = { workspace = true }

tutti-types = { version = "0.1.5", path = "../tutti-types", default-features = false }

[lints]
workspace = true
