[package]
name = "tutti-daemon"
description = "Daemon for Tutti"
repository = "https://github.com/ya7on/tutti"
version = "0.1.4"
edition.workspace = true
license.workspace = true

[dependencies]
libc = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
futures-util = { workspace = true, features = ["std", "sink"] }

tutti-core = { version = "0.1.4", path = "../tutti-core" }
tutti-transport = { version = "0.1.4", path = "../tutti-transport" }

[lints]
workspace = true
