[package]
name = "tutti-transport"
version = "0.1.2"
edition.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true }
futures-util = { workspace = true, features = ["std", "sink"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }

tutti-types = { version = "0.1.2", path = "../tutti-types", default-features = false }

[lints]
workspace = true
