[package]
name = "tutti-transport"
description = "Transport layer for Tutti"
repository = "https://github.com/ya7on/tutti"
version = "0.1.5"
edition.workspace = true
license.workspace = true
rust-version = "1.82.0"

[dependencies]
bytes = { workspace = true }
futures-util = { workspace = true, features = ["std", "sink"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }

tutti-types = { version = "0.1.5", path = "../tutti-types", default-features = false }

[lints]
workspace = true
